fix (weiter-button): Increased contrast and made background darker for Barrierefreiheit

--- a/css/format.css
+++ b/css/format.css
@@ -177,6 +177,7 @@ img {
 	display:inline-block;
 	color:#fff;
 	background:#859aa4;
+	background: #78909c;
 	text-decoration:none;
 	padding:.2rem 1.8rem .2rem 1.2rem;
 	border-radius:2rem;
